# aptos-core

./: Cargo.toml  detailed_performance_hooks.rs  generate_flamegraph.sh  performance_monitoring.rs  performance_test.sh  performance_test_example.sh  performance_test_v2.sh  send_transfer.sh  start_local_testnet.sh  transaction_performance_analyzer.py
api/: Cargo.toml
api/src/: accounts.rs  context.rs  response.rs  state.rs  transactions.rs  view_function.rs
api/src/tests/: account_abstraction_test.rs  accounts_test.rs  converter_test.rs  event_v2_translation_test.rs  multisig_transactions_test.rs  simulation_test.rs  state_test.rs  transaction_vector_test.rs  transactions_test.rs
api/test-context/: Cargo.toml
api/types/: Cargo.toml
api/types/src/: bytecode.rs  convert.rs  move_types.rs  transaction.rs  view.rs  wrappers.rs
aptos-move/aptos-debugger/src/: aptos_debugger.rs
aptos-move/aptos-gas-profiling/src/: aggregate.rs  render.rs  report.rs
aptos-move/aptos-transaction-simulation-session/src/: session.rs
aptos-move/aptos-vm/src/: aptos_vm.rs  transaction_validation.rs
aptos-move/e2e-benchmark/: Cargo.toml
aptos-move/e2e-benchmark/src/: gas_profiling.rs  lib.rs
aptos-move/e2e-move-tests/src/: harness.rs
aptos-node/: Cargo.toml
aptos-node/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: block_preparer.rs  consensus_provider.rs  counters.rs  lib.rs  network.rs  performance_monitoring.rs  round_manager.rs  signal_handler.rs  txn_hash_and_authenticator_deduper.rs
consensus/src/block_storage/: block_store.rs
consensus/src/liveness/: leader_reputation_test.rs  proposal_generator.rs
consensus/src/payload_client/: mixed.rs
consensus/src/pipeline/: execution_client.rs  pipeline_builder.rs
consensus/src/test_utils/: mock_execution_client.rs  mod.rs
crates/aptos/: Cargo.toml
crates/aptos-api-tester/: Cargo.toml
crates/aptos-debugger/: Cargo.toml
crates/aptos-genesis/: Cargo.toml
crates/aptos-jwk-consensus/: Cargo.toml
crates/aptos-jwk-consensus/src/: jwk_observer.rs  network_interface.rs
crates/aptos-performance-monitor/: Cargo.toml
crates/aptos-performance-monitor/src/: lib.rs
crates/aptos-rest-client/: Cargo.toml
crates/aptos-rest-client/src/: faucet.rs  lib.rs  types.rs
crates/aptos-rosetta/: Cargo.toml
crates/aptos-rosetta/src/: account.rs  error.rs
crates/aptos-runtimes/src/: lib.rs
crates/aptos-transaction-filters/: Cargo.toml
crates/aptos-transaction-filters/src/: batch_transaction_filter.rs  block_transaction_filter.rs  transaction_filter.rs
crates/aptos/src/: main.rs
crates/aptos/src/common/: types.rs
crates/crash-handler/: Cargo.toml
crates/crash-handler/src/: lib.rs
crates/jwk-utils/: Cargo.toml
crates/jwk-utils/src/: lib.rs
crates/transaction-generator-lib/: Cargo.toml
crates/transaction-generator-lib/src/: call_custom_modules.rs  entry_points.rs  lib.rs  workflow_delegator.rs
crates/transaction-workloads-lib/: Cargo.toml
crates/transaction-workloads-lib/src/: token_workflow.rs
dkg/: Cargo.toml
dkg/src/: agg_trx_producer.rs  lib.rs  network.rs
dkg/src/dkg_manager/: mod.rs  tests.rs
dkg/src/transcript_aggregation/: mod.rs  tests.rs
ecosystem/indexer-grpc/indexer-grpc-fullnode/: Cargo.toml
execution/aptos-aggregator/: Cargo.toml
execution/aptos-aggregator/src/: lib.rs
execution/aptos-mvhashmap/: Cargo.toml
execution/aptos-mvhashmap/src/: lib.rs
execution/block-executor/: Cargo.toml
execution/block-executor/src/: lib.rs
execution/block-partitioner/: Cargo.toml
execution/executor/: Cargo.toml
execution/executor-benchmark/: Cargo.toml
execution/executor-benchmark/src/: db_reliable_submitter.rs
execution/executor-service/: Cargo.toml
execution/executor-test-helpers/: Cargo.toml
execution/executor/src/: metrics.rs
execution/executor/src/tests/mock_vm/: mod.rs
execution/executor/src/workflow/: do_get_execution_output.rs
experimental/execution/ptx-executor/: Cargo.toml
mempool/: Cargo.toml
mempool/src/: lib.rs  performance_monitoring.rs
mempool/src/core_mempool/: index.rs  mempool.rs
mempool/src/shared_mempool/: tasks.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
standalone-aptos/: Cargo.toml
standalone-aptos/src/: main.rs
state-sync/inter-component/consensus-notifications/: Cargo.toml
state-sync/inter-component/event-notifications/: Cargo.toml
state-sync/state-sync-driver/: Cargo.toml
storage/aptosdb/: Cargo.toml
storage/backup/backup-cli/: Cargo.toml
storage/db-tool/: Cargo.toml
storage/indexer/: Cargo.toml
storage/indexer/src/: db_v2.rs  event_v2_translator.rs  lib.rs
storage/scratchpad/: Cargo.toml
storage/storage-interface/: Cargo.toml
testsuite/: single_node_performance.py  two_nodes.sh
testsuite/forge/: Cargo.toml
testsuite/forge-cli/: Cargo.toml
testsuite/fuzzer/: Cargo.toml
testsuite/fuzzer/fuzz/: Cargo.toml
testsuite/fuzzer/fuzz/fuzz_targets/: use_case_aware_shuffler.rs
testsuite/fuzzer/src/: types.rs  utils.rs
testsuite/generate-format/: Cargo.toml
testsuite/generate-format/src/: api.rs  aptos.rs  consensus.rs  (+1 more)
testsuite/smoke-test/: Cargo.toml
testsuite/testcases/: Cargo.toml
tools/compute-module-expansion-size/: Cargo.toml
types/: Cargo.toml
types/benches/: state_key.rs
types/src/: account_address.rs  aggregate_signature.rs  epoch_change.rs  ledger_info.rs  lib.rs  mempool_status.rs  validator_set.rs  validator_signer.rs  waypoint.rs
(+64 files in other folders)
