[workspace]
resolver = "2"

members = [
    "crates/aptos",
]

default-members = [
    "crates/aptos",
]

[workspace.package]
authors = ["Aptos Foundation <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.70"

[workspace.dependencies]
anyhow = "1.0.62"
clap = { version = "4.3.0", features = ["derive", "env"] }
serde = { version = "1.0.137", features = ["derive", "rc"] }
serde_json = "1.0.81"
tokio = { version = "1.21.0", features = ["full"] }
