[package]
name = "aptos"
version = "7.7.0"
edition = "2021"
description = "Aptos CLI - Blockchain management tool (Move VM removed)"

[[bin]]
name = "aptos"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

