[package]
name = "aptos"
description = "Aptos tool for management of nodes and interacting with the blockchain"
version = "7.7.0"

# Workspace inherited keys
authors = ["Aptos Foundation <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.70"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
rand = "0.8"

[[bin]]
name = "aptos"
path = "src/main.rs"
