[package]
name = "aptos-mvhashmap"
description = "Minimal MVHashMap stub (Move VM removed)"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
serde = { workspace = true }

[features]
default = []
