[package]
name = "aptos-executor"
description = "Aptos executor"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-block-executor = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-crypto = { workspace = true }
aptos-drop-helper = { workspace = true }
aptos-executor-service = { workspace = true }
aptos-executor-types = { workspace = true }
aptos-experimental-runtimes = { workspace = true }
aptos-indexer-grpc-table-info = { workspace = true }
aptos-infallible = { workspace = true }
aptos-logger = { workspace = true }
aptos-metrics-core = { workspace = true }
aptos-sdk = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-types = { workspace = true }
bcs = { workspace = true }
bytes = { workspace = true }
fail = { workspace = true }
itertools = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
aptos-config = { workspace = true }
aptos-db = { workspace = true }
aptos-db-indexer = { workspace = true, features = ["fuzzing"] }
aptos-executor-test-helpers = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-temppath = { workspace = true }
aptos-types = { workspace = true, features = ["testing"] }
arr_macro = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }

[features]
default = []
fuzzing = ["aptos-consensus-types/fuzzing", "aptos-crypto/fuzzing", "aptos-types/fuzzing", "aptos-storage-interface/fuzzing"]
failpoints = ["fail/failpoints"] # Removed aptos-vm/failpoints with Move VM
consensus-only-perf-test = []

[[bench]]
name = "data_collection"
harness = false
