[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[dependencies]
aptos-types = { workspace = true }
arbitrary = { workspace = true, features = ["derive"] }
base64 = "0.21.7"
bcs = { workspace = true }
clap = { workspace = true, features = ["derive"] }
csv = { workspace = true }
dearbitrary = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
